--- a/merchandise.web/src/main/resources/db/web.xml
+++ b/merchandise.web/src/main/resources/db/web.xml
@@ -18,7 +18,7 @@
 	
 	<context-param>
 		<param-name>spring.profiles.active</param-name>
-		<param-value>db</param-value>
+		<param-value>db,CGLib-Proxy</param-value>
 	</context-param> 
 	
 
