--- a/merchandise.web/src/main/resources/mock/web.xml
+++ b/merchandise.web/src/main/resources/mock/web.xml
@@ -15,7 +15,7 @@
 	
 	<context-param>
 		<param-name>spring.profiles.active</param-name>
-		<param-value>mock</param-value>
+		<param-value>mock,CGLib-Proxy</param-value>
 	</context-param> 
 	
 
