BeanValidationService + Tests + Hibernatevalidator in scope test in pom

--- a/merchandise.application/merchandise.application/pom.xml
+++ b/merchandise.application/merchandise.application/pom.xml
@@ -39,6 +39,7 @@
 
 
 
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
@@ -127,7 +128,11 @@
 			<version>8.3-603.jdbc4</version>
 		</dependency>
 		
-		
+		  <dependency>
+  			<groupId>javax.validation</groupId>
+ 		 	<artifactId>validation-api</artifactId>
+  			<version>1.0.0.GA</version>
+		 </dependency>
 
 		
 
@@ -166,6 +171,13 @@
 			<version>4.8.1</version>
 			<scope>test</scope>
     </dependency>
+    
+    <dependency>
+  		<groupId>org.hibernate</groupId>
+  		<artifactId>hibernate-validator</artifactId>
+  		<version>4.0.2.GA</version>
+  		<scope>test</scope>
+ 	</dependency>
 		
 	<dependency>
 			<groupId>org.mockito</groupId>
