--- a/merchandise.domain/src/main/resources/db.properties
+++ b/merchandise.domain/src/main/resources/db.properties
@@ -19,7 +19,7 @@ database_create_schema=true
 
 
 #database_dialect=HSQL
-#database_url=jdbc:hsqldb:file:life
+#database_url=jdbc:hsqldb:mem:life
 #database_driver=org.hsqldb.jdbcDriver
 #database_user=sa
 #database_password=
