--- a/merchandise.domain/pom.xml
+++ b/merchandise.domain/pom.xml
@@ -152,6 +152,13 @@
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+    		<groupId>org.hsqldb</groupId>
+    		<artifactId>hsqldb</artifactId>
+    		<version>2.2.9</version>
+    		
+		</dependency>
 
 		<dependency>
 			<groupId>org.mockito</groupId>
