--- a/merchandise.application/merchandise.application/pom.xml
+++ b/merchandise.application/merchandise.application/pom.xml
@@ -186,6 +186,13 @@
 			<scope>test</scope>
 		</dependency>	
 		
+	 <dependency>
+    		<groupId>org.hsqldb</groupId>
+    		<artifactId>hsqldb</artifactId>
+    		<version>2.2.9</version>
+    		
+		</dependency>
+		
   </dependencies>
   
   
