--- a/merchandise.web/pom.xml
+++ b/merchandise.web/pom.xml
@@ -244,6 +244,31 @@
   <artifactId>slf4j-log4j12</artifactId>
   <version>1.6.1</version>
  </dependency>
+ 
+ 
+ 	<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>${spring.version}</version>
+ </dependency> 
+ <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-web</artifactId>
+    <version>${spring.version}</version>
+  </dependency> 
+  <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-config</artifactId>
+    <version>${spring.version}</version>
+  </dependency>
+  
+  <dependency>
+	<groupId>javax.servlet</groupId>
+	<artifactId>servlet-api</artifactId>
+	<version>2.5</version>
+	<scope>provided</scope>
+</dependency>
+  
 
 		<dependency>
 			<groupId>junit</groupId>
