--- a/merchandise.web/src/main/resources/db/web.xml
+++ b/merchandise.web/src/main/resources/db/web.xml
@@ -31,7 +31,6 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 		<url-pattern>*.jsf</url-pattern>
-		
 	</servlet-mapping>
 	
 	
@@ -39,7 +38,7 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>WEB-INF/merchandise.xml,classpath:/emf.xml</param-value>
+		<param-value>WEB-INF/merchandise.xml,classpath:/emf.xml,classpath:security.xml</param-value>
 	</context-param>
 
 	<context-param>
@@ -75,7 +74,16 @@
     <url-pattern>/*</url-pattern>
 </filter-mapping>
 	
-	
+
+<filter>
+  <filter-name>springSecurityFilterChain</filter-name>
+  <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+</filter>
+
+<filter-mapping>
+  <filter-name>springSecurityFilterChain</filter-name>
+  <url-pattern>/*</url-pattern>
+</filter-mapping>	
 
 
 </web-app>
