--- a/merchandise.application/merchandise.application/pom.xml
+++ b/merchandise.application/merchandise.application/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>de.mq</groupId>
-  <artifactId>merchandise.application</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<groupId>de.mq</groupId>
+	<artifactId>merchandise.application</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <name>merchandise.application</name>
-  <url>http://maven.apache.org</url>
+	<name>merchandise.application</name>
+	<url>http://maven.apache.org</url>
 
-  <properties>
+	<properties>
 		<hibernate.version>4.0.1.Final</hibernate.version>
 		<mysql.connector.version>5.1.18</mysql.connector.version>
 		<slf4j.version>1.6.1</slf4j.version>
@@ -19,17 +19,17 @@
 
 	</properties>
 
-  <dependencies>
-  
-  	<dependency>
-  	<groupId>de.mq</groupId>
-	<artifactId>merchandise.domain</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-  	
-  	
-  	</dependency>
-  
-  <dependency>
+	<dependencies>
+
+		<dependency>
+			<groupId>de.mq</groupId>
+			<artifactId>merchandise.domain</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+
+
+		</dependency>
+
+		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
 			<artifactId>javax.persistence</artifactId>
 			<version>2.0.0</version>
@@ -75,20 +75,36 @@
 			<artifactId>spring-tx</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
-	
 
-<dependency>
-   <groupId>org.codehaus.jackson</groupId>
-   <artifactId>jackson-mapper-asl</artifactId>
-   <version>1.9.11</version>
-  </dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+
+
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.11</version>
+		</dependency>
 
 		<dependency>
 			<groupId>cglib</groupId>
@@ -127,14 +143,14 @@
 			<artifactId>postgresql</artifactId>
 			<version>8.3-603.jdbc4</version>
 		</dependency>
-		
-		  <dependency>
-  			<groupId>javax.validation</groupId>
- 		 	<artifactId>validation-api</artifactId>
-  			<version>1.0.0.GA</version>
-		 </dependency>
 
-		
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.0.0.GA</version>
+		</dependency>
+
+
 
 
 
@@ -161,48 +177,48 @@
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
-		
-	
-  
-  
-  
-    <dependency>
+
+
+
+
+
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.8.1</version>
 			<scope>test</scope>
-    </dependency>
-    
-    <dependency>
-  		<groupId>org.hibernate</groupId>
-  		<artifactId>hibernate-validator</artifactId>
-  		<version>4.0.2.GA</version>
-  		<scope>test</scope>
- 	</dependency>
-		
-	<dependency>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>4.0.2.GA</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
 			<version>1.8.4</version>
 			<scope>test</scope>
-		</dependency>	
-		
-	 <dependency>
-    		<groupId>org.hsqldb</groupId>
-    		<artifactId>hsqldb</artifactId>
-    		<version>2.2.9</version>
-    		
 		</dependency>
-		
-  </dependencies>
-  
-  
-  <build>
-  <plugins>
-  
-  
-  <plugin>
+
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<version>2.2.9</version>
+
+		</dependency>
+
+	</dependencies>
+
+
+	<build>
+		<plugins>
+
+
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.0</version>
@@ -210,8 +226,8 @@
 					<source>1.7</source>
 					<target>1.7</target>
 				</configuration>
- </plugin>
-  <plugin>
+			</plugin>
+			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.5.5.201112152213</version>
@@ -235,7 +251,7 @@
 					</execution>
 				</executions>
 			</plugin>
-  </plugins>
-  </build>
-  
+		</plugins>
+	</build>
+
 </project>
