--- a/merchandise.web/src/main/resources/mock/web.xml
+++ b/merchandise.web/src/main/resources/mock/web.xml
@@ -7,62 +7,76 @@
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
 	</context-param>
-	
+
 	<context-param>
 		<param-name>javax.faces.FACELETS_SKIP_COMMENTS</param-name>
 		<param-value>true</param-value>
 	</context-param>
-	
+
 	<context-param>
 		<param-name>spring.profiles.active</param-name>
 		<param-value>mock,CGLib-Proxy</param-value>
-	</context-param> 
-	
+	</context-param>
+
 
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-		
-	</servlet >
+
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 		<url-pattern>*.jsf</url-pattern>
-		
+
 	</servlet-mapping>
-	
-	
-	
+
+
+
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>WEB-INF/merchandise.xml</param-value>
+		<param-value>WEB-INF/merchandise.xml, classpath:security.xml
+		</param-value>
 	</context-param>
 
 	<context-param>
 		<param-name>com.sun.faces.expressionFactory</param-name>
 		<param-value>com.sun.el.ExpressionFactoryImpl</param-value>
 	</context-param>
-	
+
 	<context-param>
-    	<param-name>javax.faces.FACELETS_LIBRARIES</param-name>
-    	<param-value>/WEB-INF/functions.taglib.xml</param-value>
+		<param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+		<param-value>/WEB-INF/functions.taglib.xml</param-value>
 	</context-param>
 
 
 	<listener>
-		<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-		
+		<listener-class>org.springframework.web.context.request.RequestContextListener
+		</listener-class>
+
 	</listener>
 	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-		
+		<listener-class>org.springframework.web.context.ContextLoaderListener
+		</listener-class>
+
 	</listener>
-	
-	
-	
-	
-	
+
+
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy
+		</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+
+
+
 
 
 </web-app>
