--- a/merchandise.domain/pom.xml
+++ b/merchandise.domain/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>jar</packaging>
 
 	<name>merchandise.domain</name>
-	<url>http://maven.apache.org</url>
+	<url>http://hsqldb.org/repos/SNAPSHOT</url>
 
 	<properties>
 		<hibernate.version>4.0.1.Final</hibernate.version>
@@ -18,6 +18,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
 	</properties>
+	
+	
+	
 
 	<dependencies>
 		<dependency>
@@ -156,9 +159,11 @@
 		<dependency>
     		<groupId>org.hsqldb</groupId>
     		<artifactId>hsqldb</artifactId>
-    		<version>2.2.9</version>
+    		<version>LATEST</version>
     		
 		</dependency>
+		
+		
 
 		<dependency>
 			<groupId>org.mockito</groupId>
