--- a/merchandise.domain/src/test/resources/db.properties
+++ b/merchandise.domain/src/test/resources/db.properties
@@ -6,3 +6,14 @@ database_password=
 database_create_schema=true
 
 
+
+
+
+#database_dialect=POSTGRESQL
+#database_url=jdbc:postgresql://localhost/Kylie
+#database_driver=org.postgresql.Driver
+#database_user=postgres
+#database_password=kylie
+#database_create_schema=true
+
+
