--- a/merchandise.application/merchandise.application/pom.xml
+++ b/merchandise.application/merchandise.application/pom.xml
@@ -21,7 +21,7 @@
 		<dependency>
 			<groupId>de.mq</groupId>
 			<artifactId>merchandise.domain</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${merchandise.version}</version>
 
 
 		</dependency>
@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
-			<version>1.9.11</version>
+			<version>${jackson-mapper-asl.version}</version>
 			
 		</dependency>
 
@@ -68,13 +68,15 @@
 		<dependency>
 			<groupId>com.jolbox</groupId>
 			<artifactId>bonecp</artifactId>
-			<version>0.7.1.RELEASE</version>
+			<version>${bonecp.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>8.3-603.jdbc4</version>
+			<version>${postgresql.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		
@@ -83,8 +85,8 @@
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>2.2.9</version>
-
+			<version>${hsql.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
