--- a/merchandise.parent/pom.xml
+++ b/merchandise.parent/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>de.mq</groupId>
   <artifactId>merchandise.parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>${merchandise.version}</version>
   <packaging>pom</packaging>
 
   <name>merchandise.parent</name>
@@ -17,15 +17,48 @@
 		<slf4j.version>1.6.1</slf4j.version>
 		<spring.version>3.1.0.RELEASE</spring.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
+		<junit.version>4.8.1</junit.version>
+		<mockito.version>1.8.4</mockito.version>
+		<log4j.version>1.2.16</log4j.version>
+		<cglib.version>2.2.2</cglib.version>
+		<spring-data.version>1.0.2.RELEASE</spring-data.version>
+		<validation-api.version>1.0.0.GA</validation-api.version>
+		<hibernate-validator.version>4.0.2.GA</hibernate-validator.version>
+		<java.version>1.7</java.version>
+		<maven-compiler-plugin.version>3.0</maven-compiler-plugin.version>
+		<jacoco.version>0.6.2.201302030002</jacoco.version>
+		<bonecp.version>0.7.1.RELEASE</bonecp.version>
+		<postgresql.version>8.3-603.jdbc4</postgresql.version>
+		<ojdbc6.version>6.0</ojdbc6.version>
+		<hsql.version>2.2.9</hsql.version>
+		<jackson-mapper-asl.version>1.9.11</jackson-mapper-asl.version>
+		<jsf.version>2.1.16</jsf.version>
+		<el.version>2.2</el.version>
+		<servlet-api.version>3.0.1</servlet-api.version>
+		<primefaces.version>3.4.2</primefaces.version>
+		<maven-jetty-plugin.version>6.1.15</maven-jetty-plugin.version>
+		<mapping.util.version>0.0.1-SNAPSHOT</mapping.util.version>
+		<merchandise.version>0.0.1-SNAPSHOT</merchandise.version>
 	</properties>
  
-  
+ <profiles>
+ 	<profile>
+ 	   <id>build</id>
+ 	   <modules>
+ 	       <module>../merchandise.domain</module>
+		   <module>../merchandise.application/merchandise.application</module>
+		   <module>../merchandise.web</module>
+ 	   </modules> 
+ 	</profile>
+ 
+ </profiles>
   <modules>
-		<module>../merchandise.domain</module>
-		<module>../merchandise.application/merchandise.application</module>
-		<module>../merchandise.web</module>
+
+		
+		
  </modules>
+ 
+
  <scm>
  
  
@@ -36,14 +69,14 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
-			<version>1.8.4</version>
+			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
 		
@@ -68,7 +101,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.16</version>
+			<version>${log4j.version}</version>
 		</dependency>
 		
 		<dependency>
@@ -101,13 +134,13 @@
 		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
-			<version>2.2.2</version>
+			<version>${cglib.version}</version>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-			<version>1.0.2.RELEASE</version>
+			<version>${spring-data.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -132,13 +165,13 @@
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
-			<version>1.0.0.GA</version>
+			<version>${validation-api.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.0.2.GA</version>
+			<version>${hibernate-validator.version}</version>
 		</dependency>
 		
 		
@@ -153,10 +186,10 @@
     <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
 				</configuration>
 			</plugin>
     	
@@ -164,7 +197,7 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 			
-				<version>0.6.2.201302030002</version>
+				<version>${jacoco.version}</version>
 				<configuration>
 					<destfile>${basedir}/target/coverage-reports/jacoco-unit.exec</destfile>
 					<datafile>${basedir}/target/coverage-reports/jacoco-unit.exec</datafile>
