--- a/merchandise.web/pom.xml
+++ b/merchandise.web/pom.xml
@@ -28,59 +28,58 @@
 		<dependency>
 			<groupId>de.mq</groupId>
 			<artifactId>merchandise.application</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${merchandise.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>de.mq</groupId>
 			<artifactId>mapping.util</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${mapping.util.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
-			<version>2.1.16</version>
+			<version>${jsf.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
-			<version>2.1.16</version>
+			<version>${jsf.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.el</groupId>
 			<artifactId>el-api</artifactId>
-			<version>2.2</version>
-			<scope>compile</scope>
+			<version>${el.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish.web</groupId>
 			<artifactId>el-impl</artifactId>
 			<scope>runtime</scope>
-			<version>2.2</version>
+			<version>${el.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.jolbox</groupId>
 			<artifactId>bonecp</artifactId>
-			<version>0.7.1.RELEASE</version>
+			<version>${bonecp.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>8.3-603.jdbc4</version>
+			<version>${postgresql.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>${servlet-api.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>3.4.2</version>
+			<version>${primefaces.version}</version>
 		</dependency>
 
 	</dependencies>
@@ -120,7 +119,7 @@
 				<groupId>org.mortbay.jetty</groupId>
 				<artifactId>maven-jetty-plugin</artifactId>
 
-				<version>6.1.15</version>
+				<version>${maven-jetty-plugin.version}</version>
 
 				<!-- its renamed to jetty-maven-plugin, but it will not work with j2ee 
 					6 and jetty, fu..ing JavaEE -->
