--- a/merchandise.web/src/main/resources/db/web.xml
+++ b/merchandise.web/src/main/resources/db/web.xml
@@ -67,12 +67,33 @@
     <filter-class>
         org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter
     </filter-class>
-</filter>
-
-<filter-mapping>
+	</filter>
+	<filter-mapping>
     <filter-name>oemInViewFilter</filter-name>
     <url-pattern>/*</url-pattern>
 </filter-mapping>
+
+<filter>
+	<filter-name>PrimeFaces FileUpload Filter</filter-name>
+	<filter-class>org.primefaces.webapp.filter.FileUploadFilter
+	</filter-class>
+	<init-param>
+		<param-name>thresholdSize</param-name>
+		<param-value>1024</param-value>
+	</init-param>
+	<init-param>
+		<param-name>uploadDirectory</param-name>
+		<param-value>C:\tmp</param-value>
+	</init-param>
+</filter>
+	<filter-mapping>
+		<filter-name>PrimeFaces FileUpload Filter</filter-name>
+		<servlet-name>Faces Servlet</servlet-name>
+</filter-mapping>
+
+
+
+
 	
 
 <filter>
