--- a/merchandise.parent/pom.xml
+++ b/merchandise.parent/pom.xml
@@ -39,6 +39,8 @@
 		<maven-jetty-plugin.version>6.1.15</maven-jetty-plugin.version>
 		<mapping.util.version>0.0.1-SNAPSHOT</mapping.util.version>
 		<merchandise.version>0.0.1-SNAPSHOT</merchandise.version>
+		
+		<commonsio.version>1.3.2</commonsio.version>
 	</properties>
  
  <profiles>
