--- a/merchandise.web/pom.xml
+++ b/merchandise.web/pom.xml
@@ -84,10 +84,10 @@
 		
 		
 		<dependency>
-<groupId>commons-io</groupId>
-<artifactId>commons-io</artifactId>
-<version>1.3.2</version>
-</dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commonsio.version}</version>
+		</dependency>
 <dependency>
 <groupId>commons-fileupload</groupId>
 <artifactId>commons-fileupload</artifactId>
