Uploadservice for attachements

--- a/merchandise.application/merchandise.application/pom.xml
+++ b/merchandise.application/merchandise.application/pom.xml
@@ -96,6 +96,12 @@
 			<scope>test</scope>
 		</dependency>
 
+	<dependency>
+		<groupId>org.apache.tika</groupId>
+		<artifactId>tika-core</artifactId>
+		<version>${tika.version}</version>
+	</dependency>
+
 	</dependencies>
 
 
