--- a/merchandise.parent/pom.xml
+++ b/merchandise.parent/pom.xml
@@ -37,6 +37,7 @@
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<primefaces.version>3.4.2</primefaces.version>
 		<maven-jetty-plugin.version>6.1.15</maven-jetty-plugin.version>
+		<tika.version>1.0</tika.version>
 		<mapping.util.version>0.0.1-SNAPSHOT</mapping.util.version>
 		<merchandise.version>0.0.1-SNAPSHOT</merchandise.version>
 		
