--- a/merchandise.web/src/main/resources/db/web.xml
+++ b/merchandise.web/src/main/resources/db/web.xml
@@ -15,6 +15,22 @@
 	
 	
 	
+	 <servlet>
+	      <servlet-name>DispatcherServlet</servlet-name>
+	      <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+	      <init-param>
+	          <param-name>contextConfigLocation</param-name>
+	          <param-value></param-value>
+	      </init-param>
+	  </servlet>
+	  
+	  <servlet-mapping>
+	      <servlet-name>DispatcherServlet</servlet-name>
+	      <url-pattern>/attachements/*</url-pattern>
+	  </servlet-mapping>
+	
+	
+	
 	
 	<context-param>
 		<param-name>spring.profiles.active</param-name>
