--- a/merchandise.web/src/main/resources/mock/web.xml
+++ b/merchandise.web/src/main/resources/mock/web.xml
@@ -32,6 +32,20 @@
 	</servlet-mapping>
 
 
+     <servlet>
+	      <servlet-name>DispatcherServlet</servlet-name>
+	      <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+	      <init-param>
+	          <param-name>contextConfigLocation</param-name>
+	          <param-value></param-value>
+	      </init-param>
+	  </servlet>
+	  
+	  <servlet-mapping>
+	      <servlet-name>DispatcherServlet</servlet-name>
+	      <url-pattern>/attachements/*</url-pattern>
+	  </servlet-mapping>
+
 
 
 	<context-param>
@@ -75,7 +89,16 @@
 	</filter-mapping>
 
 
-
+   <filter>
+	<filter-name>PrimeFaces FileUpload Filter</filter-name>
+	<filter-class>org.primefaces.webapp.filter.FileUploadFilter
+	</filter-class>
+</filter>
+	<filter-mapping>
+		<filter-name>PrimeFaces FileUpload Filter</filter-name>
+		<servlet-name>Faces Servlet</servlet-name>
+</filter-mapping>
+   
 
 
 
