--- a/merchandise.application/merchandise.application/pom.xml
+++ b/merchandise.application/merchandise.application/pom.xml
@@ -50,6 +50,7 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
 
 
 
@@ -96,12 +97,20 @@
 			<scope>test</scope>
 		</dependency>
 
-	<dependency>
-		<groupId>org.apache.tika</groupId>
-		<artifactId>tika-core</artifactId>
-		<version>${tika.version}</version>
-	</dependency>
-
+		
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>${aspectj.version}</version>
+		</dependency>
+ 
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${aspectj.version}</version>
+		</dependency>
+	
+	
 	</dependencies>
 
 
