--- a/merchandise.application/merchandise.application/pom.xml
+++ b/merchandise.application/merchandise.application/pom.xml
@@ -26,7 +26,11 @@
 
 		</dependency>
 
-		
+		<dependency>
+			<groupId>de.mq</groupId>
+			<artifactId>mapping.util</artifactId>
+			<version>${mapping.util.version}</version>
+		</dependency>
 
 
 		<dependency>
