POSTGIS Index full text search and distance search

--- a/merchandise.domain/src/test/resources/db.properties
+++ b/merchandise.domain/src/test/resources/db.properties
@@ -10,7 +10,7 @@ database_create_schema=true
 
 
 #database_dialect=POSTGRESQL
-#database_url=jdbc:postgresql://localhost/Kylie
+#database_url=jdbc:postgresql://localhost:5433/Kylie
 #database_driver=org.postgresql.Driver
 #database_user=postgres
 #database_password=kylie
