opportunities with adresses (persistent addresses for geosearch

--- a/merchandise.domain/src/test/resources/db.properties
+++ b/merchandise.domain/src/test/resources/db.properties
@@ -8,7 +8,8 @@ database_create_schema=true
 
 
 
-
+# the server 5433 is with a runable postGis
+# the server 5432 is without a running postGis
 #database_dialect=POSTGRESQL
 #database_url=jdbc:postgresql://localhost:5433/Kylie
 #database_driver=org.postgresql.Driver
