--- a/merchandise.application/merchandise.application/pom.xml
+++ b/merchandise.application/merchandise.application/pom.xml
@@ -115,6 +115,13 @@
 		</dependency>
 	
 	
+	<dependency>
+	<groupId>org.codehaus.groovy</groupId>
+	<artifactId>groovy</artifactId>
+	<version>1.8.9</version>
+</dependency>
+            
+	
 	</dependencies>
 
 
