--- a/merchandise.application/merchandise.application/pom.xml
+++ b/merchandise.application/merchandise.application/pom.xml
@@ -121,6 +121,8 @@
 	<version>1.8.9</version>
 	
 </dependency>
+
+
             
 	
 	</dependencies>
@@ -128,14 +130,46 @@
 
 	<build>
 		<plugins>
-<plugin>
-          <groupId>org.codehaus.groovy</groupId>
-    <artifactId>groovy-eclipse-compiler</artifactId>
-   
-    <extensions>true</extensions>
 
-	</plugin>		
-		</plugins>
+	  <plugin>
+    <groupId>org.codehaus.gmaven</groupId>
+    <artifactId>gmaven-plugin</artifactId>
+    <version>1.5</version>
+    <configuration>
+      <providerSelection>1.8</providerSelection>
+    </configuration>
+    <dependencies>
+      <dependency>
+        <groupId>org.codehaus.gmaven.runtime</groupId>
+        <artifactId>gmaven-runtime-1.8</artifactId>
+        <version>1.5</version>
+      </dependency>
+      <dependency>
+        <groupId>org.codehaus.groovy</groupId>
+        <artifactId>groovy-all</artifactId>
+        <version>1.8.9</version>
+        </dependency>
+        
+        
+    </dependencies>
+    <executions>
+      <execution>
+      
+       
+        <goals>
+      
+          <goal>compile</goal>
+        
+          <goal>testCompile</goal>
+         
+        </goals>
+      </execution>
+    </executions>
+  </plugin>
+	
+	
+	
+	</plugins>	
 	</build>
 
 </project>
