--- a/merchandise.application/merchandise.application/pom.xml
+++ b/merchandise.application/merchandise.application/pom.xml
@@ -175,6 +175,7 @@
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--  most greatest f... ever !!! -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
