First trials with restclient in groovy

--- a/merchandise.application/merchandise.application/pom.xml
+++ b/merchandise.application/merchandise.application/pom.xml
@@ -120,7 +120,13 @@
 	<artifactId>groovy</artifactId>
 	<version>1.8.9</version>
 	
-</dependency>
+	</dependency>
+	
+	<dependency>
+    <groupId>org.codehaus.groovy.modules.http-builder</groupId>
+    <artifactId>http-builder</artifactId>
+    <version>0.7</version>
+  </dependency>
 
 
             
