--- a/merchandise.domain/src/main/resources/db.properties
+++ b/merchandise.domain/src/main/resources/db.properties
@@ -1,9 +1,9 @@
-database_dialect=POSTGRESQL
-database_url=jdbc:postgresql://localhost/Kylie
-database_driver=org.postgresql.Driver
-database_user=postgres
-database_password=kylie
-database_create_schema=true
+#database_dialect=POSTGRESQL
+#database_url=jdbc:postgresql://localhost/Kylie
+#database_driver=org.postgresql.Driver
+#database_user=postgres
+#database_password=kylie
+#database_create_schema=true
 
 
 
