Services + Repositories Customer + Subject

--- a/merchandise.application/src/test/resources/db.properties
+++ b/merchandise.application/src/test/resources/db.properties
@@ -1,15 +1,15 @@
-#database_dialect=HSQL
-#database_url=jdbc\:hsqldb\:file\:merchandise
-#database_driver=org.hsqldb.jdbcDriver
-#database_user=sa
-#database_password=
-#database_create_schema=true
-
-database_dialect=POSTGRESQL
-database_url=jdbc:postgresql://localhost:5432/Kylie
-database_driver=org.postgresql.Driver
-database_user=postgres
-database_password=kylie
+database_dialect=HSQL
+database_url=jdbc\:hsqldb\:file\:merchandise
+database_driver=org.hsqldb.jdbcDriver
+database_user=sa
+database_password=
 database_create_schema=true
+
+#database_dialect=POSTGRESQL
+#database_url=jdbc:postgresql://localhost:5432/Kylie
+#database_driver=org.postgresql.Driver
+#database_user=postgres
+#database_password=kylie
+#database_create_schema=true
 
 
