--- a/merchandise.web/src/main/webapp/WEB-INF/web.xml
+++ b/merchandise.web/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,7 @@
 		<init-param>
 			<description>Vaadin UI to display</description>
 			<param-name>UI</param-name>
-			<param-value>de.mq.merchandise.subject.support.AddressbookUI</param-value>
+			<param-value>de.mq.merchandise.subject.support.SubjectViewImpl</param-value>
 		</init-param>
 	</servlet>
 	<servlet-mapping>
