--- a/merchandise.parent/pom.xml
+++ b/merchandise.parent/pom.xml
@@ -17,7 +17,7 @@
 		<slf4j.version>1.6.1</slf4j.version>
 		<!--  spring.version>4.1.3.RELEASE</spring.version-->
 		<!--  spring.version>4.1.3.RELEASE</spring.version-->
-		<spring.version>4.2.0.BUILD-SNAPSHOT</spring.version>
+		<spring.version>4.2.0.RC1</spring.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit.version>4.9</junit.version>
 		<mockito.version>1.8.4</mockito.version>
@@ -192,9 +192,10 @@
 
 
 		<repository>
-			<id>spring-snapshots</id>
-			<name>spring-snapshots</name>
-			<url>https://repo.spring.io/snapshot/</url>
+			<id>spring-milestone</id>
+			<name>spring-milestone</name>
+		
+			<url>http://repo.spring.io/milestone/</url>
 		</repository>
 
 		
