use util.application as dependency

--- a/merchandise.web/pom.xml
+++ b/merchandise.web/pom.xml
@@ -33,6 +33,11 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>de.mq</groupId>
+			<artifactId>util.application</artifactId>
+			<version>${util.application.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.jolbox</groupId>
